unpackaged/main/default/objects/appirio_core__Config_Option__c/appirio_core__Config_Option__c.object-meta.xml
<CustomObject>
    <customHelpPage>appirio_core__ConfigurationHelp</customHelpPage>
    <description>Core package object. Configuration options, organized into configuration groups, contain one or more configuration values that you can edit. They have a name, version, and type (Text, Boolean, or Picklist), as well as help text describing the configuration controlled and the default values. Use configuration options together with Salesforce custom settings to configure FinancialForce PSA. Configuration options have a master-detail relationship with child configuration values and a lookup relationship to configuration groups.</description>
    <label>Configuration Option</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>