unpackaged/main/default/objects/appirio_core__Config_Option__c/fields/appirio_core__Allow_Multiple_Values__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Allow_Multiple_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to allow multiple values for this option.</inlineHelpText>
    <label>Allow Multiple Values</label>
    <type>Checkbox</type>
</CustomField>