unpackaged/main/default/objects/appirio_core__Config_Option__c/fields/appirio_core__Config_Group__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Config_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Group</label>
    <referenceTo>appirio_core__Config_Group__c</referenceTo>
    <relationshipLabel>Configuration Options</relationshipLabel>
    <relationshipName>ConfigOptions</relationshipName>
    <type>Lookup</type>
</CustomField>