unpackaged/main/default/objects/appirio_core__Config_Option__c/fields/appirio_core__Description__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Description__c</fullName>
    <description>Description of the config option</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>