unpackaged/main/default/objects/appirio_core__Config_Option__c/fields/appirio_core__Group_Key__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Group_Key__c</fullName>
    <formula>appirio_core__Config_Group__r.appirio_core__Key__c</formula>
    <label>Group Key</label>
    <type>Text</type>
</CustomField>