unpackaged/main/default/objects/appirio_core__Config_Option__c/fields/appirio_core__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Help_Text__c</fullName>
    <label>Help Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>