unpackaged/main/default/objects/appirio_core__Config_Option__c/fields/appirio_core__Help_URL__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Help_URL__c</fullName>
    <label>Help URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>