unpackaged/main/default/objects/appirio_core__Config_Option__c/fields/appirio_core__Version__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Version__c</fullName>
    <description>Version of the application that this option was added in.</description>
    <label>Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>