unpackaged/main/default/objects/appirio_core__Config_Option__c/validationRules/appirio_core__Picklist_Values_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>appirio_core__Picklist_Values_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNULL( appirio_core__Picklist_Values__c ),  LEN( appirio_core__Picklist_Values__c ) = 0 ),  ISPICKVAL( appirio_core__Type__c , 'Picklist') )</errorConditionFormula>
    <errorDisplayField>appirio_core__Picklist_Values__c</errorDisplayField>
    <errorMessage>Picklist values are required for type Picklist</errorMessage>
</ValidationRule>